Use input stream for reading script files in build plan setup